--- a/src/sass/layout/_searchBooksOffline.scss
+++ b/src/sass/layout/_searchBooksOffline.scss
@@ -6,7 +6,7 @@
 	margin-bottom: 5rem;
 
 	.h1 {
-		margin: 10rem 0 4rem 0;
+		margin: 15rem 0 2rem 0;
 	}
 
 	form {
